force-app/main/default/objects/AccountTeamMember/fields/QualityDepartment__c.field-meta.xml
<CustomField>
    <fullName>QualityDepartment__c</fullName>
    <label>Quality Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neunkirchen</fullName>
            </value>
            <value>
                <fullName>Burbach</fullName>
            </value>
            <value>
                <fullName>Nauweiler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>