force-app/main/default/objects/AccountTeamMember/fields/SuccessorAccount__c.field-meta.xml
<CustomField>
    <fullName>SuccessorAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Predecessor Account Team Members</relationshipLabel>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>