force-app/main/default/objects/AccountTeamMember/validationRules/RestrictaccessforSAPAccountTeamMembers.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictaccessforSAPAccountTeamMembers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.ByPassLogic__c.ByPassValidation__c),
NOT(ISBLANK(Account.SAPAccountNumber__c)),
$Profile.Name &lt;&gt; &quot;Systemadministrator&quot;,
$Profile.Name &lt;&gt; &quot;Salesforce API Only System Integrations&quot;

)</errorConditionFormula>
    <errorMessage>Account team members cannot be modified for SAP accounts. If changes are required, please insert them directly in SAP. The adjustment will then be transferred back to Salesforce with the next interface batch run.</errorMessage>
</ValidationRule>